start of adjacency list

--- a/distance/Cargo.toml
+++ b/distance/Cargo.toml
@@ -3,6 +3,13 @@ name = "distance"
 version = "0.1.0"
 edition = "2021"
 
+[[test]]
+name = "distance"
+path = "src/main.rs"
+
+    [test.env]
+    RUST_BACKTRACE=1
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
